# Steno

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: CLAUDE.md  README.md  main.py  package.json
app/electron/: main.js
app/scripts/: build-python.sh
app/steno/: audio.py  config.py  i18n.py  session.py  transcriber.py
app/tests/: test_audio.py  test_i18n.py  test_packaging.py  test_server.py
electron/: main.js  preload.js
locales/: en.json  es.json
scripts/: build-python.sh
server/: README.md  main.py  pyproject.toml
server/deploy/: Caddyfile.example  README-DEPLOY.md  com.steno.server.plist  install-launchagent.sh
server/locales/: en.json  es.json
server/static/: app.js  index.html  style.css
server/steno_server/: __init__.py  audio_io.py  auth.py  config.py  denoiser.py  diarizer.py  i18n.py  jobs.py  logging_setup.py  markdown_export.py  pipeline.py  postprocess.py  server.py  storage.py  transcriber.py  vad.py  worker.py
server/tests/: conftest.py  generate_fixtures.py  test_audio_io.py  test_auth.py  test_denoiser.py  test_diarizer.py  test_jobs.py  test_markdown_export.py  test_pipeline.py  test_postprocess.py  test_server.py  test_storage.py  test_transcriber.py  test_vad.py  test_websocket.py
server/tests/fixtures/: README.md
static/: index.html
steno/: audio.py  config.py  server.py  session.py  transcriber.py
tests/: test_audio.py  test_i18n.py  test_packaging.py  test_server.py  test_session.py  test_transcriber.py
