[project]
name = "steno"
version = "0.1.0-alpha.1"
description = "Real-time local transcription for classes and meetings"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "httpx-ws>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/AlambritoDito/Steno"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
