[project]
name = "steno-server"
version = "0.1.0"
description = "LAN/Tailscale transcription server backed by mlx-whisper, sibling to the Steno desktop app"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alan Pérez Fernández" }]
dependencies = [
    "mlx-whisper>=0.4.0",
    "silero-vad>=5.1.0",
    "pyannote.audio>=3.3.0",
    "demucs>=4.0.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    "numpy>=1.26.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "httpx-ws>=0.6.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/AlambritoDito/Steno"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["steno_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501"]
